# distributeddatamgr_relational_store

./: .clang-format  .gitignore  222.txt  2432.diff  AGENTS.md  CODEOWNERS  OAT.xml  README.en.md  README.md  README_zh.md  RdbStoreAssetResultSetJsunit.test.js  RdbStoreAttachJsunit.test.js  RdbStoreCloud.test.js  RdbStoreDataChange.test.js  RdbStoreResultSetJsunit.test.js  RdbstoreAfterCloseJsunit.test.js  RdbstoreCustomDir.test.js  RdbstoreUpdateJsunit.test.js  abs_predicates.cpp  appdatamgr.gni  bundle.json  changes.diff  connection_pool.cpp  ohos.build  rd_utils.cpp  rdb_store_impl.cpp  relational_store.gni  sqlite_connection.cpp
data_share/: README_data_share_zh.md  README_zh.md  bundle.json  datashare.gni
data_share/interfaces/inner_api/: BUILD.gn
frameworks/cj/: BUILD.gn
frameworks/cj/include/: native_log.h  relational_store_ffi.h  relational_store_impl_literesultset.h  relational_store_impl_rdbpredicatesproxy.h  relational_store_impl_rdbstore.h  relational_store_impl_resultsetproxy.h  relational_store_impl_transaction.h  relational_store_utils.h
frameworks/cj/mock/: relational_store_mock.cpp
frameworks/cj/src/: relational_store_core_ffi.cpp  relational_store_ffi.cpp  relational_store_impl_literesultset_core.cpp  relational_store_impl_literesultset_extended.cpp  relational_store_impl_rdbpredicatesproxy.cpp  relational_store_impl_rdbpredicatesproxy_comparison.cpp  relational_store_impl_rdbpredicatesproxy_core.cpp  relational_store_impl_rdbstore.cpp  relational_store_impl_rdbstore_config.cpp  relational_store_impl_rdbstore_core.cpp  relational_store_impl_rdbstore_extensions.cpp  relational_store_impl_rdbstore_observer.cpp  relational_store_impl_resultsetproxy.cpp  relational_store_impl_resultsetproxy_core.cpp  relational_store_impl_resultsetproxy_extended.cpp  relational_store_impl_transaction_core.cpp  relational_store_impl_transaction_query.cpp  relational_store_literesultset_ffi.cpp  relational_store_predicates_ffi.cpp  relational_store_resultset_ffi.cpp  relational_store_store_ffi.cpp  relational_store_transaction_ffi.cpp  relational_store_utils.cpp
frameworks/native/icu/: BUILD.gn
frameworks/native/obs_mgr_adapter/: BUILD.gn  obs_mgr_adapter.cpp  obs_mgr_adapter.h  rdb_obs_mgr_adapter.versionscript
frameworks/native/rdb_crypt/: BUILD.gn  relational_store_crypt.cpp  relational_store_crypt.h  relational_store_crypt.versionscript
interfaces/inner_api/appdatafwk/: BUILD.gn  native_appdatafwk.versionscript
interfaces/inner_api/cloud_data/: BUILD.gn
interfaces/inner_api/common_type/: BUILD.gn
interfaces/inner_api/dataability/: BUILD.gn  native_dataability.versionscript
interfaces/inner_api/gdb/: BUILD.gn
interfaces/inner_api/rdb/: BUILD.gn  BUILD.gn.rej
interfaces/inner_api/rdb_bms_adapter/: BUILD.gn
interfaces/inner_api/rdb_data_ability_adapter/: BUILD.gn  rdb_data_ability_adapter.versionscript
interfaces/jskits/: BUILD.gn
interfaces/ndk/: BUILD.gn  libnative_rdb.ndk.json  native_rdb_ndk.versionscript  relational_store_inner_types.h
interfaces/ndk/include/: asset.h  cursor.h  data_asset.h  native_value_object.h  native_values_bucket.h  ndk_logger.h  oh_asset.h  oh_cursor.h  oh_data_value.h  oh_data_values.h  oh_data_values_buckets.h  oh_predicates.h  oh_predicates_objects.h  oh_rdb_crypto_param.h  oh_rdb_transaction.h  oh_rdb_types.h  oh_value_object.h  oh_values_bucket.h  predicates.h  relational_cursor.h  relational_error_code.h  relational_predicates.h  relational_store.h  relational_store_error_code.h  relational_value_object.h  relational_values_bucket.h
interfaces/ndk/src/: BUILD.gn  convertor_error_code.cpp  convertor_error_code.h  modify_time_cursor.cpp  modify_time_cursor.h  oh_data_define.h  oh_data_utils.cpp  oh_data_utils.h  oh_data_value.cpp  oh_data_values.cpp  oh_data_values_buckets.cpp  oh_rdb_crypto_param.cpp  oh_rdb_transaction.cpp  oh_rdb_types.cpp  rdb_config_version_define.h  relational_asset.cpp  relational_asset.h  relational_cursor.cpp  relational_cursor.h  relational_cursor_impl.h  relational_predicates.cpp  relational_predicates.h  relational_predicates_impl.h  relational_predicates_objects.cpp  relational_predicates_objects.h  relational_store.cpp  relational_store_impl.h  relational_store_inner.h  relational_types_v0.h  relational_value_object.cpp  relational_value_object_impl.h  relational_values_bucket.cpp  relational_values_bucket.h  relational_values_bucket_impl.h
interfaces/rdb_ndk_utils/: BUILD.gn  native_rdb_ndk_utils.versionscript
interfaces/rdb_ndk_utils/include/: rdb_ndk_utils.h
interfaces/rdb_ndk_utils/src/: rdb_ndk_utils.cpp
preference/interfaces/inner_api/: BUILD.gn
preferences/interfaces/inner_api/: BUILD.gn
rdbmock/external_inner_kit/ability_base/: BUILD.gn  mock_aa_fwk.cpp  mock_ability_runtime_ability_context.cpp  mock_context_container.cpp  mock_fa_ability_context.cpp  mock_uri.cpp
rdbmock/external_inner_kit/ability_runtime/: BUILD.gn  mock_context.cpp  mock_data_ability_observer_stub.cpp  (+1 more)
test/interface/: BUILD.gn  cache_result_set_test.cpp  common.cpp  common.h  rdb_attach_test.cpp  rdb_bigint_test.cpp  rdb_callback_icu_test.cpp  rdb_concurrent_querywithcurd_test.cpp  rdb_concurrent_querywithverd_test.cpp  rdb_corrupt_test.cpp  rdb_delete_test.cpp  rdb_distributed_test.cpp  rdb_double_write_concurrent_test.cpp  rdb_duplicate_column_data_test.cpp  rdb_encrypt_decrypt_test.cpp  rdb_execute_rd_test.cpp  rdb_execute_test.cpp  rdb_get_store_test.cpp  rdb_helper_test.cpp  rdb_insert_test.cpp  rdb_memory_db_test.cpp  rdb_open_callback_test.cpp  rdb_predicates_join_b_test.cpp  rdb_predicates_join_test.cpp  rdb_predicates_test.cpp  rdb_rd_data_aging_test.cpp  rdb_read_only_test.cpp  rdb_security_manager_test.cpp  rdb_sql_utils_test.cpp  rdb_sqlite_shared_result_set_test.cpp  rdb_step_result_get_row_test.cpp  rdb_step_result_set_test.cpp  rdb_store_backup_restore_test.cpp  rdb_store_concurrent_test.cpp  rdb_store_config_test.cpp  rdb_store_interface_test.cpp  rdb_store_rekeyEx_test.cpp  rdb_store_rekey_test.cpp  rdb_store_subscribe_test.cpp  rdb_test_common.cpp  (+11 more)
test/ndk/: BUILD.gn
(+2342 files in other folders)
