# Copyright (c) 2022 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

declare_args() {
  relational_store_rdb_support_icu = true
}

common_tool_path = "//foundation/distributeddatamgr/kv_store/frameworks/common"

relational_store_base_path = "//foundation/distributeddatamgr/relational_store"

relational_store_js_common_path =
    "${relational_store_base_path}/frameworks/js/napi/common"

relational_store_napi_path = "${relational_store_base_path}/frameworks/js/napi"

relational_store_native_path = "${relational_store_base_path}/frameworks/native"

relational_store_innerapi_path =
    "${relational_store_base_path}/interfaces/inner_api"

cloud_data_native_path =
    "${relational_store_base_path}/frameworks/native/cloud_data"
cloud_data_napi_path = "${relational_store_napi_path}/cloud_data"

datashare_path =
    "//foundation/distributeddatamgr/data_share/interfaces/inner_api"

ipc_path = "//foundation/communication/ipc/interfaces/innerkits"

kvstore_path = "//foundation/distributeddatamgr/kv_store/frameworks"

distributedfile_path =
    "//foundation/distributeddatamgr/distributedfile/interfaces/kits/js/src"
