# Copyright (c) 2022 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

declare_args() {
  relational_store_rdb_support_icu = true
}

common_tool_path = "//foundation/distributeddatamgr/kv_store/frameworks/common"
distributeddata_base_path = "//foundation/distributeddatamgr"

relational_store_base_path = "//foundation/distributeddatamgr/relational_store"

relational_store_mock_path = "${relational_store_base_path}/rdbmock"

relational_store_js_common_path =
    "${relational_store_base_path}/frameworks/js/napi/common"

relational_store_napi_path = "${relational_store_base_path}/frameworks/js/napi"

relational_store_native_path = "${relational_store_base_path}/frameworks/native"

relational_store_innerapi_path =
    "${relational_store_base_path}/interfaces/inner_api"

relational_store_common_path = "${relational_store_base_path}/frameworks/common"

cloud_data_native_path =
    "${relational_store_base_path}/frameworks/native/cloud_data"
cloud_data_napi_path = "${relational_store_napi_path}/cloud_data"

datashare_path =
    "//foundation/distributeddatamgr/data_share/interfaces/inner_api"

ipc_path = "//foundation/communication/ipc/interfaces/innerkits"

kvstore_path = "//foundation/distributeddatamgr/kv_store/frameworks"

kvstore_interface_path = "//foundation/distributeddatamgr/kv_store/interfaces/innerkits/distributeddata/include"

distributedfile_path =
    "//foundation/filemanagement/file_api/interfaces/kits/js/src"

sdk_c_path = "//interface/sdk_c/distributeddatamgr"

plugins_path = "//plugins"
