# Copyright (c) 2022 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

aafwk_inner_api_path =
    "//foundation/ability/ability_runtime/interfaces/inner_api"

aafwk_kits_path = "//foundation/ability/ability_runtime/frameworks/kits"

aafwk_services_path = "//foundation/ability/ability_runtime/services"

datashare_base_path = "//foundation/distributeddatamgr/appdatamgr/data_share"

datashare_common_native_path = "${datashare_base_path}/frameworks/native/common"

datashare_common_napi_path = "${datashare_base_path}/frameworks/js/napi/common"

datashare_napi_path = "${datashare_base_path}/frameworks/js/napi"

datashare_innerapi_path = "${datashare_base_path}/interfaces/inner_api"

datashare_native_provider_path =
    "${datashare_base_path}/frameworks/native/provider"

datashare_native_consumer_path =
    "${datashare_base_path}/frameworks/native/consumer"
