# Copyright (c) 2023 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")
import("//build/ohos/ndk/ndk.gni")
import("//foundation/distributeddatamgr/relational_store/relational_store.gni")

ohos_ndk_headers("native_rdb_ndk_header") {
  dest_dir = "$ndk_headers_out_dir/database/rdb/"
  sources = [
    "./include/oh_cursor.h",
    "./include/oh_predicates.h",
    "./include/oh_value_object.h",
    "./include/oh_values_bucket.h",
    "./include/relational_store.h",
    "./include/relational_store_error_code.h",
  ]
}

ohos_ndk_library("libnative_rdb_ndk") {
  output_name = "native_rdb_ndk"
  output_extension = "so"
  ndk_description_file = "./libnative_rdb.ndk.json"
  system_capability =
      "SystemCapability.DistributedDataManager.RelationalStore.Core"
  min_compact_version = "10"
}

ohos_shared_library("native_rdb_ndk") {
  include_dirs = [
    "include",
    "${relational_store_common_path}/include",
    "${relational_store_native_path}/rdb/include",
  ]
  sources = [
    "src/relational_cursor.cpp",
    "src/relational_predicates.cpp",
    "src/relational_store.cpp",
    "src/relational_value_object.cpp",
    "src/relational_values_bucket.cpp",
  ]

  defines = [ "API_EXPORT=__attribute__((visibility (\"default\")))" ]

  deps = [ "${relational_store_innerapi_path}/rdb:native_rdb" ]

  external_deps = [
    "c_utils:utils",
    "hilog:libhilog",
  ]

  part_name = "relational_store"
  subsystem_name = "distributeddatamgr"
}
