# Copyright (c) 2023 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
import("//build/test.gni")
import("//foundation/distributeddatamgr/relational_store/relational_store.gni")

module_output_path = "relational_store/native_rdb_ndk"

###############################################################################
config("module_private_config") {
  visibility = [ ":*" ]

  include_dirs = [
    "${relational_store_base_path}/interfaces/ndk/include",
    "${relational_store_innerapi_path}/rdb/include",
    "${relational_store_innerapi_path}/appdatafwk/include",
    "${relational_store_base_path}/interfaces/ndk/src",
  ]

  if (relational_store_rdb_support_icu) {
    include_dirs += [
      "//third_party/icu/icu4c/source/i18n",
      "//third_party/icu/icu4c/source/common",
    ]
  }
}

ohos_unittest("NativeRdbNdkTest") {
  module_out_path = module_output_path

  sources = [
    "unittest/rdb_cursor_test.cpp",
    "unittest/rdb_predicates_test.cpp",
    "unittest/rdb_store_open_callback_test.cpp",
    "unittest/rdb_store_test.cpp",
  ]

  configs = [ ":module_private_config" ]

  external_deps = [
    "hilog_native:libhilog",
    "relational_store:native_rdb_ndk",
  ]

  deps = [
    "//third_party/googletest:gtest_main",
    "//third_party/icu/icu4c:shared_icui18n",
    "//third_party/icu/icu4c:shared_icuuc",
  ]
}

###############################################################################
group("unittest") {
  testonly = true

  deps = [ ":NativeRdbNdkTest" ]
}