# Copyright (c) 2023 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
import("//build/test.gni")
import("//foundation/distributeddatamgr/relational_store/relational_store.gni")

module_output_path = "relational_store/native_rdb_ndk"

###############################################################################
config("module_private_config") {
  visibility = [ ":*" ]

  include_dirs = [
    "${kvstore_path}/common",
    "${relational_store_base_path}/interfaces/ndk/include",
    "${relational_store_innerapi_path}/rdb/include",
    "${relational_store_innerapi_path}/appdatafwk/include",
    "${relational_store_base_path}/interfaces/ndk/src",
    "${relational_store_common_path}/include",
    "${relational_store_native_path}/rdb/include",
  ]
}

ohos_unittest("NativeRdbNdkTest") {
  module_out_path = module_output_path

  sources = [
    "${relational_store_base_path}/interfaces/ndk/src/convertor_error_code.cpp",
    "${relational_store_base_path}/interfaces/ndk/src/modify_time_cursor.cpp",
    "${relational_store_base_path}/interfaces/ndk/src/relational_asset.cpp",
    "${relational_store_base_path}/interfaces/ndk/src/relational_cursor.cpp",
    "${relational_store_base_path}/interfaces/ndk/src/relational_predicates.cpp",
    "${relational_store_base_path}/interfaces/ndk/src/relational_predicates_objects.cpp",
    "${relational_store_base_path}/interfaces/ndk/src/relational_store.cpp",
    "${relational_store_base_path}/interfaces/ndk/src/relational_values_bucket.cpp",
    "unittest/rdb_asset_test.cpp",
    "unittest/rdb_cursor_test.cpp",
    "unittest/rdb_predicates_test.cpp",
    "unittest/rdb_store_test.cpp",
  ]

  configs = [ ":module_private_config" ]

  external_deps = [
    "access_token:libaccesstoken_sdk",
    "access_token:libtoken_setproc",
    "c_utils:utils",
    "hilog:libhilog",
  ]

  deps = [
    "${relational_store_innerapi_path}/rdb:native_rdb",
    "//third_party/googletest:gtest_main",
  ]
}

###############################################################################
group("unittest") {
  testonly = true

  deps = [ ":NativeRdbNdkTest" ]
}
