# Copyright (c) 2023 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
import("//build/test.gni")
import("//foundation/distributeddatamgr/relational_store/relational_store.gni")

module_output_path = "relational_store/relational_store/native_rdb_ndk"

###############################################################################
config("module_private_config") {
  visibility = [ ":*" ]

  include_dirs = [
    "${relational_store_base_path}/interfaces/ndk",
    "${relational_store_base_path}/interfaces/ndk/include",
    "${relational_store_innerapi_path}/rdb/include",
    "${relational_store_innerapi_path}/appdatafwk/include",
    "${relational_store_base_path}/interfaces/ndk/src",
    "${relational_store_common_path}/include",
    "${relational_store_native_path}/rdb/include",
  ]
}

ohos_unittest("NativeRdbNdkTest") {
  module_out_path = module_output_path

  sources = [
    "unittest/oh_value_object_test.cpp",
    "unittest/rdb_asset_test.cpp",
    "unittest/rdb_crypto_param_test.cpp",
    "unittest/rdb_cursor_test.cpp",
    "unittest/rdb_performance_test.cpp",
    "unittest/rdb_predicates_pref_test.cpp",
    "unittest/rdb_predicates_test.cpp",
    "unittest/rdb_store_configv2_test.cpp",
    "unittest/rdb_store_test.cpp",
    "unittest/rdb_transaction_capi_test.cpp",
    "unittest/rdb_vector_test.cpp",
  ]

  configs = [ ":module_private_config" ]

  external_deps = [
    "access_token:libaccesstoken_sdk",
    "access_token:libtoken_setproc",
    "c_utils:utils",
    "googletest:gtest_main",
    "hilog:libhilog",
    "kv_store:datamgr_common",
  ]

  deps = [
    "${relational_store_base_path}/interfaces/rdb_ndk_utils:native_rdb_ndk_utils",
    "${relational_store_base_path}/interfaces/ndk:native_rdb_ndk",
    "${relational_store_innerapi_path}/rdb:native_rdb",
  ]
}

###############################################################################
group("unittest") {
  testonly = true

  deps = [ ":NativeRdbNdkTest" ]
}

group("fuzztest") {
  testonly = true
  deps = []
  deps += [
    "fuzztest/datavalue_fuzzer:fuzztest",
    "fuzztest/ohrdbtransaction_fuzzer:fuzztest",
    "fuzztest/relationalstore_fuzzer:fuzztest",
    "fuzztest/relationalstorecapi_fuzzer:fuzztest",
    "fuzztest/valuebucket_fuzzer:fuzztest",
    "fuzztest/valueobject_fuzzer:fuzztest",
    "fuzztest/ohpredicates_fuzzer:fuzztest",
    "fuzztest/oh_data_values_fuzzer:fuzztest",
    "fuzztest/oh_predicates_fuzzer:fuzztest",
    "fuzztest/oh_rdb_crypto_param_fuzzer:fuzztest",
  ]
}
